Fix cover size on small screen.

--- a/memory.css
+++ b/memory.css
@@ -7,6 +7,7 @@
 
 #popup {
 	z-index: 999;
+	min-width: 18em;
 	padding: 4em 2em 12em;
 	border: 1px solid grey;
 	background-color: rgba(255, 255, 255, 0.96);
